--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     h2{color:#00587a}
     hr{border-style:none;border-top-style:dotted ;width:20%;height:1% ;border-width:10px;border-color:#686d76}
     .shivam{border-radius:100%;}
-    a:link{color:#a6f6f1;}
+    a:link{color:#7579e7;}
     a:visited{color:#d789d7;}
     a:hover{color:#0278ae;}
     a:selected{color:#ffe2e2;}
